--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.11.10",
     "express": "^4.15.4",
-    "moment": "^2.18.1"
-  },
-  "engines": {
-    "node": "8.x"
+    "moment": "^2.18.1",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.2"
   },
   "repository": {
     "url": "https://github.com/JohnIrle/timestamp-micro-service"
@@ -21,5 +22,12 @@
     "node",
     "glitch",
     "express"
-  ]
+  ],
+  "devDependencies": {
+    "@types/jest": "^27.0.3",
+    "@types/supertest": "^2.0.11",
+    "jest": "^27.3.1",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.7"
+  }
 }
