--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "Sends a JSON object with unix and natural language dates. Accepts unix and natural language parameters.",
   "main": "server.js",
   "scripts": {
+    "prebuild": "rm -rf ./build",
     "build": "tsc",
+    "postbuild": "cp -r ./views ./build",
     "start": "node build/index.js",
     "dev": "ts-node-dev index.ts",
-    "test": "jest --watchAll --no-cache",
-    "test:nowatch": "jest"
+    "test": "jest",
+    "test:watch": "jest --watchAll --no-cache",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
