--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
   "name": "timestamp-micro-service",
-  "version": "0.0.1",
+  "version": "0.2.0",
   "description": "Sends a JSON object with unix and natural language dates. Accepts unix and natural language parameters.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "prebuild": "rm -rf ./build",
+    "build": "tsc",
+    "postbuild": "cp -r ./views ./build",
+    "start": "node build/index.js",
+    "dev": "ts-node-dev index.ts",
+    "test": "jest",
+    "test:watch": "jest --watchAll --no-cache",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.11.10",
     "express": "^4.15.4",
-    "moment": "^2.18.1"
-  },
-  "engines": {
-    "node": "8.x"
+    "moment": "^2.18.1",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.2"
   },
   "repository": {
     "url": "https://github.com/JohnIrle/timestamp-micro-service"
@@ -21,5 +29,15 @@
     "node",
     "glitch",
     "express"
-  ]
+  ],
+  "devDependencies": {
+    "@types/jest": "^27.0.3",
+    "@types/supertest": "^2.0.11",
+    "jest": "^27.3.1",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.7"
+  },
+  "jest": {
+    "preset": "ts-jest"
+  }
 }
